# capnp-gj

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  serialize.rs
test/: Cargo.toml  test.rs
