[package]
name = "capnp-gj"
version = "0.0.1-dev"
authors = ["David Renshaw <david@sandstorm.io>"]
license = "MIT"
description = "asynchronous I/O for Cap'n Proto"
repository = "https://github.com/dwrensha/capnp-gj"

keywords = ["async"]

[dependencies]
byteorder = "*"
gj = "*"

[dependencies.capnp]
git = "https://github.com/dwrensha/capnproto-rust"