[package]
name = "capnp-gj"
version = "0.1.0"
authors = ["David Renshaw <david@sandstorm.io>"]
license = "MIT"
description = "asynchronous I/O for Cap'n Proto"
repository = "https://github.com/dwrensha/capnp-gj"

keywords = ["async"]

[dependencies]
byteorder = "0.4"
capnp = "0.6"

[dependencies.gj]
git = "https://github.com/dwrensha/gj.git"

[dependencies.gjio]
git = "https://github.com/dwrensha/gjio.git"


