[package]

name = "capnp-gj-test"
version = "0.0.0"
authors = [ "David Renshaw <dwrenshaw@sandstorm.io>"  ]
build = "build.rs"

[lib]

name = "capnp_gj_test"
path = "test.rs"


[build-dependencies.capnpc]
git = "https://github.com/dwrensha/capnpc-rust"

[dependencies]
capnp-gj = {path = "./../"}
gj = "*"


[dependencies.capnp]
git = "http://github.com/dwrensha/capnproto-rust"