[package]

name = "capnp-gj-test"
version = "0.0.0"
authors = [ "David Renshaw <dwrenshaw@sandstorm.io>"  ]
build = "build.rs"

[lib]

name = "capnp_gj_test"
path = "test.rs"


[build-dependencies]
capnpc = "0.6"

[dependencies]
capnp-gj = {path = "./../"}
capnp = "0.6"

[dependencies.gj]
git = "https://github.com/dwrensha/gj.git"

[dependencies.gjio]
git = "https://github.com/dwrensha/gjio.git"